--- a/src/hello.html
+++ b/src/hello.html
@@ -1,5 +1,107 @@
-<html>
-  <body>
-    <h1>Hello Extensions</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Backlog Search</title>
+  <style>
+    body {
+      width: 320px;
+      padding: 16px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: linear-gradient(135deg, #f5f5f5 0%, #ffffff 100%);
+    }
+    h1 {
+      font-size: 18px;
+      color: #42b983;
+      margin-bottom: 12px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    h1::before {
+      content: "🎯";
+      font-size: 20px;
+    }
+    .description {
+      font-size: 13px;
+      color: #666;
+      margin-bottom: 16px;
+    }
+    .usage {
+      background: white;
+      border-radius: 8px;
+      padding: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+    }
+    .usage h2 {
+      font-size: 14px;
+      color: #333;
+      margin-bottom: 8px;
+      font-weight: 600;
+    }
+    .usage ol {
+      margin: 0;
+      padding-left: 20px;
+      font-size: 12px;
+      color: #555;
+    }
+    .usage li {
+      margin-bottom: 6px;
+    }
+    .example {
+      background: #f8f9fa;
+      border-left: 3px solid #42b983;
+      padding: 8px;
+      margin-top: 12px;
+      font-size: 12px;
+      border-radius: 4px;
+    }
+    .example strong {
+      color: #2f9768;
+    }
+    .status {
+      margin-top: 16px;
+      padding: 8px;
+      background: #e8f5e9;
+      border-radius: 4px;
+      font-size: 12px;
+      color: #2e7d32;
+      text-align: center;
+    }
+    .status::before {
+      content: "✅";
+      margin-right: 4px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Backlog Search</h1>
+  <div class="description">
+    Backlogの検索機能を強化します。<br>
+    課題番号を入力すると、直接課題を開くボタンが表示されます。
+  </div>
+  
+  <div class="usage">
+    <h2>使い方</h2>
+    <ol>
+      <li>Backlogサイト（*.backlog.com/*）を開く</li>
+      <li>検索ボックスに課題番号を入力</li>
+      <li>「課題を開く」ボタンをクリック</li>
+    </ol>
+    
+    <div class="example">
+      <strong>入力例：</strong><br>
+      • 1<br>
+      • 26<br>
+      • 205
+    </div>
+  </div>
+  
+  <div class="status">
+    拡張機能は有効です
+  </div>
+</body>
 </html>
